Add classes to the document

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+/* Colours
+#360259 Purple
+#5B118C Light Purple
+#F2EDE4 Light Yellow
+#8C5B49 Brown
+#402927 Dark Brown
+---------------------------------------- */
+
 /* Global Styles
 ---------------------------------------- */
 * {
