--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,17 @@
 /* Global Styles
 ---------------------------------------- */
 body {
+  margin: 0;
+  padding: 0;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.content-wrap {
+  width: 800px;
+  margin: 0 auto;
 }
 
 /* About
@@ -23,6 +34,18 @@ body {
 .projects {
   background-color: #f2ede4;
   color: #000;
+}
+
+.projects a {
+  background: #5b118c;
+  padding: 5px;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+}
+
+.projects a:hover {
+  background: rgba(54, 2, 89, 0.5);
 }
 
 /* Work experience
