--- a/css/styles.css
+++ b/css/styles.css
@@ -11,14 +11,26 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: "Montserrat", sans-serif;
+  font-size: 15px;
+}
+
+h1,
+h2 {
+  font-family: "Caveat", cursive;
 }
 
 a:hover {
   text-decoration: none;
 }
 
+h1 {
+  font-size: 100px;
+}
+
 h2 {
   margin: 0;
+  font-size: 45px;
 }
 
 .content-wrap {
