--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,18 @@ h2 {
   font-size: 45px;
 }
 
+h3 {
+  margin-bottom: 0;
+}
+
+h3 + p {
+  font-style: italic;
+}
+
+h3 ~ p {
+  margin: 0;
+}
+
 .content-wrap {
   width: 800px;
   margin: 0 auto;
