Change line height and font size for headings at small size

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,3 +171,13 @@ footer {
     gap: 20px;
   }
 }
+
+@media screen and (max-width: 749px) {
+  h1 {
+    font-size: 75px;
+    line-height: 0.9;
+  }
+  h2 {
+    line-height: 1;
+  }
+}
